Se agrega seccion 7

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   </style>
 </head>
 <body>
- 
+ <section class="invitation">
+    <h2>Ready To Build Your Community?</h2>
+    <button class="button-request">
+      <span>Get Started For Free</span>
+    </button>
+ </section>
 </body>
 </html>
