--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="icon-communities">
     <img src="./images/icon-messages.svg" alt="">
     <p> <strong>2.7m+</strong> 
-    <p class="messages-sent">Messages Sent</p></p>
+    <a> Messages Sent</a></p>
 </div>
 </section>
 <!--
