--- a/index.html
+++ b/index.html
@@ -33,6 +33,35 @@
     <a> Messages Sent</a></p>
 </div>
 </section>
+<section class="section-42" >
+  <div  class="top-mobile-1" >
+    <img src="./images/bg-section-top-mobile-1.svg" alt="">
+  </div>
+  <div class="top-desktop">
+   <img src="./images/bg-section-top-desktop-1.svg" alt="">
+  </div>
+  <div class="illustration-grow-together">
+    <img src="./images/illustration-grow-together.svg" alt="">
+  </div>
+   <div class="Grow-Together-text">
+     <p>
+     <strong> Grow Together</strong>
+     </p>
+     <p class="Grow-Together-text-2">
+      Generate meaningful discussions with your audience and build a strong, loyal community. 
+      Think of the insightful conversations you miss out on with a feedback form. 
+    </p>
+   </div>
+   <div class="bottom-mobile-1">
+    <img src="./images/bg-section-bottom-mobile-1.svg" alt="">
+   </div>
+
+   <div class="bottom-desktop">
+    <img src="./images/bg-section-bottom-desktop-1.svg" alt="">
+  </div>
+  </section>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur dolor enim maxime iste doloribus velit dicta quod ipsa neque corporis aperiam quae reiciendis, distinctio modi delectus quibusdam accusamus laborum soluta tenetur at ad est! Doloribus ducimus facere dolores necessitatibus maiores. Ipsa, architecto. Ad, est quia!</p>
+ 
 <!--
   Try it free
 
